--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse ml-4" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto" style="font-size:18px">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.html">aaaaa <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/trailer.html">Trailer</a>
